<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:padding="11dp"
    android:background="@drawable/background1">


<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hotelheading"
        android:text="Welcome to the Hotel Hello"
        android:textSize="26sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input1"
        android:layout_below="@+id/hotelheading"
        android:layout_marginTop="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_full_name"
            android:inputType="text"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input2"
        android:layout_below="@+id/input1"
        android:layout_marginTop="12dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="numberPassword"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/input2"
        android:layout_marginTop="11dp"
        android:text="@string/log_in"
        android:id="@+id/login"
        android:textSize="18sp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_new_traveller"
        android:layout_below="@+id/login"
        android:layout_marginTop="11dp"
        android:id="@+id/are_you"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/are_you"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/sign_up"
        android:textColor="#0308FF"
        android:focusable="true" />
</RelativeLayout>